--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<redhat.library.version>6.5.0.Final-redhat-12</redhat.library.version>
 		<slf4j.api.version>1.7.7.redhat-2</slf4j.api.version>
 		<log4j.version>2.8.2</log4j.version>
+		<powermock.version>1.7.1</powermock.version>
 	</properties>
 
     <dependencyManagement>
@@ -104,6 +105,18 @@
 		   <artifactId>json-simple</artifactId>
 		   <version>1.1.1</version>
 		</dependency>
+		<dependency>
+	      <groupId>org.powermock</groupId>
+	      <artifactId>powermock-module-junit4</artifactId>
+	      <version>${powermock.version}</version>
+	      <scope>test</scope>
+	   </dependency>
+	   <dependency>
+	      <groupId>org.powermock</groupId>
+	      <artifactId>powermock-api-mockito2</artifactId>
+	      <version>${powermock.version}</version>
+	      <scope>test</scope>
+	   </dependency>
     </dependencies>
     
     <build>
