--- a/src/main/resources/BPMSRestProxy.properties
+++ b/src/main/resources/BPMSRestProxy.properties
@@ -1,4 +1,4 @@
 username = bpmsAdmin
 password = redhat1!
 kie.server.url = http://localhost:8080/kie-server/services/rest/server
-container.id = uhg
+container.id = test
