--- a/src/main/resources/BPMSJMSProxy.properties
+++ b/src/main/resources/BPMSJMSProxy.properties
@@ -1,8 +1,8 @@
-jms.remoting.url = http-remoting://LH7U05CG71507V4:8080
+jms.remoting.url = http-remoting://localhost:8080
 jms.initial.context.factory = org.jboss.naming.remote.client.InitialContextFactory
 jms.connection.factory = jms/RemoteConnectionFactory
 jms.request.queue.jndi = jms/queue/KIE.SERVER.REQUEST
 jms.response.queue.jndi = jms/queue/KIE.SERVER.RESPONSE
 username = bpmsAdmin
 password = jboss_1234
-container.id = uhg
+container.id = test
